package Diadoc.Api.Proto;

option java_outer_classname = "ResolutionTargetProtos";

message ResolutionTarget {
	optional string Department = 1;
	optional string DepartmentId = 2;
	optional string User = 3;
	optional string UserId = 4;
}
